# F1Trillion

./: README.md
src/hand_detection/: package.xml  setup.cfg  setup.py
src/hand_detection/hand_detection/: hand_detection_node.py
src/lidar_collision_avoidance/: CMakeList.txt  README.md  package.xml  setup.cfg  setup.py
src/lidar_collision_avoidance/launch/: combined_lidar_motor_launch.py  lidar_collision_avoidance_launch.py
src/lidar_collision_avoidance/lidar_collision_avoidance/: lidar_collision_avoidance_node.py
src/lidar_collision_avoidance/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/test/: test.py
